# manager_mccode

./: .coverage  .env.example  .gitignore  README.md  com.jake.manager-mccode.plist  duckdb_documentation.md  manager_mccode.db-shm  manager_mccode.db-wal  manager_mccode.service  pyproject.toml  run.py  suggested main.py
manager_mccode/: __init__.py  __main__.py  main.py  tempCodeRunnerFile.py
manager_mccode/cli/: service.py
manager_mccode/config/: config.py  logging_config.py  settings.py
manager_mccode/models/: focus_session.py  screen_summary.py
manager_mccode/services/: analyzer.py  batch.py  database.py  display.py  errors.py  image.py  metrics.py  runner.py  task_detector.py
manager_mccode/web/: app.py
manager_mccode/web/static/css/: styles.css
manager_mccode/web/static/js/: dashboard.js
manager_mccode/web/templates/: dashboard.html
tests/: conftest.py  test_analyzer.py  test_batch.py  test_database.py  test_image.py  test_integration.py  test_metrics.py  test_task_detector.py  test_web.py
tests/models/: test_focus_session.py
tests/services/: test_database.py
